src/test/ui/chalkify/lower_trait.stderr
error: program clause dump
  --> $DIR/lower_trait.rs:13:1
   |
LL | #[rustc_dump_program_clauses] //~ ERROR program clause dump
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: FromEnv(S: std::marker::Sized) :- FromEnv(Self: Foo<S, T, U>).
   = note: FromEnv(T: std::marker::Sized) :- FromEnv(Self: Foo<S, T, U>).
   = note: FromEnv(U: std::marker::Sized) :- FromEnv(Self: Foo<S, T, U>).
   = note: Implemented(Self: Foo<S, T, U>) :- FromEnv(Self: Foo<S, T, U>).

error: aborting due to previous error

